--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "imgbb-uploader": "^1.5.0",
     "method-override": "^3.0.0",
     "mongodb": "^4.12.1",
     "mongoose": "^6.7.5",
